# Life-Playlist

./: .gitignore  README.md  app.ini  coverage.sh  dev.ini  docker-compose.yml  flask.Dockerfile  main.py  nginx.conf  pyproject.toml  requirements.txt  test_calc.py  test_coverage.py  wsgi.ini
.github/workflows/: life_playlist_ci.yml
app/: __init__.py  settings.py
app/config/: config.py  database.db
app/helpers/: background_helper.py  logger_helper.py  sendsoulmate_helper.py  updatedashboard_helper.py  updateuserplaylist_helper.py
app/helpers/cloud_function/: fetch_thesoundsofspotifyplaylist_data_to_bigquery_helper.py  get_google_id_token.py  updatedashboard_genresurl_helper.py
app/model/: models.py
app/repo/: repo.py
app/static/: home.css  index.css  index.js  intro.css  login.css  not_login.css  oauth.js  playlist.css  privacy.css
app/templates/: base.html  dashboard.html  home.html  intro.html  login.html  privacy_policy.html  sign_up.html  soulmate_mail.html  soulmate_mail_old.html
app/views/: auth.py  views.py
migrations/versions/: 183414e588da_init.py  404a5903a775_add_testt_migrate_col.py  7fc56165753e_initial_migration.py  b1bb6d479466_init.py
tests/: test.sh  test_auth.py
