[tool.poetry]
name = "life-playlist專案"
version = "0.1.0"
description = ""
authors = ["linooohon <linooohon@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Flask = "^2.0.3"
APScheduler = "^3.9.1"
Flask-Migrate = "^3.1.0"
Flask-Caching = "^1.10.1"
Flask-Login = "^0.5.0"
Flask-Mail = "^0.9.1"
spotipy = "^2.19.0"
youtube-search-python = "^1.6.2"
python-dotenv = "^0.19.2"
google-cloud-bigquery = "^2.34.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
